# verilog-synthesis

./: .gitignore  CMakeLists.txt
include/: .lexer.h.un~  .parser.h.un~  lexer.h  lexer.h~  parser.h  parser.h~
src/: .lexer.cpp.swp  .parser.cpp.swp  lexer.cpp  main.cpp  parser.cpp
tests/: .test1.v.swp  test1-logs.txt  test1.v
